# benchmark

./: .gitignore  Doxyfile  Makefile  Makefile.am  Makefile.html  Makefile_8am.html  README.md  README_8md.html  TODO  alloc.c  alloc.gnuplot  alloc_2Makefile.html  alloc_2Makefile_8am.html  alloc_8c.html  alloc_8gpi.html  amdahl.c  amdahl.gpi  amdahl.mk  amdahl_2Makefile.html  amdahl_8c.html  amdahl_8gpi.html  annotated.html  argfct.c  argfct.gpi  argfct_2Makefile.html  argfct_8c.html  argfct_8gpi.html  benchmark.c  benchmark.h  benchmark_8c.html  benchmark_8h.html  benchmark_8h_source.html  bootstrap.sh  calloc_2Makefile.html  calloc_8c.html  calloc_8gpi.html  classes.html  configure.ac  dir_01284e59d658032137ac90170bc51d5c.html  dir_06a0f38e2c77c07c1da5515412274374.html  (+145 more)
alloc/: Makefile  Makefile.am  README.html  alloc.c  alloc.gpi  alloc.mk
amdahl/: Makefile  Makefile.am  README.html  amdahl.c  amdahl.gpi
argfct/: .gitignore  Makefile  Makefile.am  README.html  argfct  argfct.c  argfct.gpi  argfct.mk
calloc/: .gitignore  Makefile  Makefile.am  README.html  calloc  calloc.c  calloc.gpi
file/: Makefile  Makefile.am  file.c  file.gpi  file.mk
fork/: Makefile  Makefile.am  fork.c  fork.gpi  fork.mk
io/: .gitignore  Makefile  Makefile.am  README.html  io.c  io.gpi  io.mk  perf_intro.html  std.txt  std_buf.txt  std_nobuf.txt  sys_direct.txt  sys_nosync.txt  sys_sync.txt
lib/: Makefile  Makefile.am  benchmark.c  benchmark.h  copy.c  copy.h  cp.c  cp.h  gen_html.sh  lib.mk
memfork/: Makefile.am  memfork.c
memoryfork/: .gitignore  .memfork.c.swp  Makefile  README.html  memfork.c  memfork.gpi
mmap/: Makefile  Makefile.am  README.html  mmap.c  mmap.gpi  mmap.mk
mutsem/: .gitignore  Makefile  Makefile.am  README.html  mutsem  mutsem.c  mutsem.gpi
pipe/: Makefile  Makefile.am  pipe.c  pipe.gpi
search/: all_24.js  all_5f.js  all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_68.js  all_69.js  all_6b.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_75.js  all_77.js  classes_61.js  classes_72.js  classes_73.js  defines_61.js  defines_62.js  defines_63.js  defines_64.js  defines_66.js  defines_67.js  defines_69.js  defines_6c.js  defines_6d.js  defines_6f.js  defines_70.js  defines_73.js  defines_74.js  files_61.js  files_62.js  (+55 more)
shell/: .gitignore  Makefile  Makefile.am  README.html  shell-bash.sh  shell.c  shell.gpi  shell.mk
shm/: Makefile  Makefile.am  shm.c  shm.gpi
tab/: Makefile  Makefile.am  README.html  tab  tab.c  tab.gpi
textbin/: .gitignore  Makefile  Makefile.am  README.html  start.c  template.c  template.h  template.sh  textbin.c  textbin.gpi  textbintemplate.c
thread/: Makefile  Makefile.am  thread.c  thread.gpi
types/: Makefile  Makefile.am  types.c  types.gpi
