ACLOCAL_AMFLAGS = -I m4

# the subdirectories of the project to go into
# lib needs to be the first one because it is needed by others
SUBDIRS =   \
			lib \
			alloc \
			io \
			shell \
			textbin \
			argfct \
			memfork \
			mutsem \
			tab \
			amdahl \
			calloc \
			file \
			fork \
			mmap \
			pipe \
			shm \
			thread \
			types
			
